# pixano-inference

./: .env.template  .env_example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  check_license_header.py  docker-compose.yaml  dockerfile  gen_ref_pages.py  mkdocs.yml  objects.inv  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .pylintrc  docs.yml  format.yml  license_check.yml  lint.yml  lint_and_format.yml  publish.yml  python-format.yml  test_back.yml
0.4.1/: 404.html  objects.inv  sitemap.xml
0.4.1/api_reference/: index.html
0.4.1/api_reference/SUMMARY/: index.html
0.4.1/api_reference/client/: index.html
0.4.1/api_reference/main/: index.html
0.4.1/api_reference/models_registry/: index.html
0.4.1/api_reference/settings/: index.html
0.4.1/getting_started/: index.html
0.4.1/home/: index.html
0.4.1/search/: search_index.json
0.5.0/: 404.html
0.5.0/api_reference/: index.html
0.5.0/api_reference/SUMMARY/: index.html
0.5.0/api_reference/client/: index.html
0.5.0/api_reference/main/: index.html
0.5.0/api_reference/settings/: index.html
0.5.0/getting_started/: index.html
0.5.1/api_reference/: index.html
0.5.1/api_reference/SUMMARY/: index.html
0.5.1/api_reference/main/: index.html
0.5.1/api_reference/settings/: index.html
0.5.1/home/: index.html
0.5.1/search/: search_index.json
0.5.2/: 404.html  objects.inv
0.5.2/api_reference/: index.html
0.5.2/api_reference/SUMMARY/: index.html
0.5.2/api_reference/celery/: index.html
0.5.2/api_reference/client/: index.html
0.5.2/api_reference/main/: index.html
0.5.2/api_reference/settings/: index.html
0.5.2/examples/: index.html
0.5.2/examples/Grounding_+_SAM2/: index.html
0.5.2/examples/Grounding_DINO/: index.html
0.5.2/examples/SAM2_image/: index.html
0.5.2/examples/SAM2_video/: index.html
0.5.2/examples/VQA/: index.html
0.5.2/getting_started/: index.html
0.5.2/home/: index.html
0.5.2/search/: search_index.json
0.5.3/: sitemap.xml
0.5.3/api_reference/celery/: index.html
0.5.3/home/: index.html
0.5.5/: objects.inv  sitemap.xml
0.5.5/examples/Grounding_+_SAM2/: index.html
0.5.6/: index.html  sitemap.xml
0.5.6/api_reference/celery/: index.html
0.5.6/api_reference/settings/: index.html
0.5.6/examples/SAM2_video/: index.html
0.5.6/getting_started/: index.html
api_reference/: index.html
api_reference/SUMMARY/: index.html
api_reference/github/groundingdino/: index.html
api_reference/github/mobile_sam/: index.html
api_reference/github/sam/: index.html
api_reference/pytorch/deeplabv3/: index.html
api_reference/pytorch/maskrcnnv2/: index.html
api_reference/pytorch/yolov5/: index.html
api_reference/tensorflow/efficientdet/: index.html
api_reference/tensorflow/fasterrcnn/: index.html
api_reference/transformers/clip/: index.html
api_reference/utils/main/: index.html
deploy/: sam2_example.py  test_sam.py
docs/: README.md  api-reference.md  gen_ref_pages.py  index.md
docs/api_reference/: index.md
docs/assets/: extra.css
docs/code/: index.md
docs/code/pytorch_models/: deeplabv3.md  maskrcnnv2.md  yolov5.md
docs/code/segment_anything/: segment_anything.md
docs/code/tensorflow_models/: efficientdet.md  fasterrcnn.md
docs/examples/: Grounding_+_SAM2.md  Grounding_DINO.md  SAM2_image.md  SAM2_video.md  VQA.md  index.md
docs/getting_started/: index.md  installing_pixano_inference.md
docs/home/: index.md
docs/ray_serve/: custom_models.md  index.md  quickstart.md
docs/user/: index.md  install.md  interactive_annotation.md  pre_annotation.md
examples/custom_yoloe/: config.py  model.py  test_yoloe.py
examples/yolo/: README.md  __init__.py  config.py  model.py  test_yolo.py
getting_started/: index.html
getting_started/installing_pixano_inference/: index.html
getting_started/interactive_annotation/: index.html
getting_started/pre_annotation/: index.html
latest/: 404.html  objects.inv  sitemap.xml
latest/api-reference/: index.html
latest/api_reference/: index.html
latest/api_reference/SUMMARY/: index.html
latest/api_reference/celery/: index.html
latest/api_reference/client/: index.html
latest/api_reference/main/: index.html
latest/api_reference/models_registry/: index.html
latest/api_reference/settings/: index.html
latest/examples/: index.html
latest/examples/Grounding_+_SAM2/: index.html
latest/getting_started/: index.html
latest/home/: index.html
latest/ray_serve/: index.html
latest/search/: search_index.json
pixano_inference/: __version__.py
pixano_inference/github/: __init__.py  groundingdino.py  mobile_sam.py  sam.py
pixano_inference/offline_models/: __init__.py  pytorch_models.py  segment_anything.py  tensorflow_models.py
pixano_inference/online_models/: segment_anything.py
pixano_inference/pytorch/: __init__.py  deeplabv3.py  maskrcnnv2.py  yolov5.py
pixano_inference/pytorch_models/: deeplabv3.py  maskrcnnv2.py  yolov5.py
pixano_inference/segment_anything/: __init__.py  sam.py  segment_anything.py
pixano_inference/tensorflow/: efficientdet.py  fasterrcnn.py
pixano_inference/tensorflow_models/: __init__.py  efficientdet.py  fasterrcnn.py
pixano_inference/transformers/: __init__.py  clip.py
pixano_inference/utils/: __init__.py  main.py
scripts/: test_sam2_ray.py
search/: search_index.json
src/pixano_inference/: __init__.py  __version__.py  celery.py  client.py  main.py  models_registry.py  settings.py  tasks.py
stable/: 404.html  sitemap.xml
stable/api_reference/: index.html
stable/getting_started/: index.html
stable/home/: index.html
stable/search/: search_index.json
tests/: conftest.py  test_client.py  test_ray_app.py
tests/configs/: __init__.py  test_configs.py
tests/fixtures/: client.py
tests/models/: test_base.py  test_sam2_image.py
tests/providers/: test_base.py
tests/pydantic/: __init__.py
tests/schemas/: test_rle.py
tests/tasks/: test_utils.py
(+343 files in other folders)
